--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/jest": "^29.5.14",
     "@types/multer": "^1.4.13",
     "@types/node": "^22.15.31",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
